--- a/theme/htdocs/css/kmom02.css
+++ b/theme/htdocs/css/kmom02.css
@@ -4981,6 +4981,7 @@ html {
   background-color: #1b1c20;
   overflow: -moz-scrollbars-vertical;
   overflow-y: scroll;
+  overflow-x: hidden;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -5019,7 +5020,6 @@ img {
   width: 60%;
   margin: 0 auto;
   background-color: #1b1c20;
-  border: 0.5px solid #252527;
 }
 .inner-wrap.inner-wrap-footer {
   border: none;
@@ -5069,8 +5069,8 @@ figcaption p {
 }
 .author-byline {
   margin: 30px 0;
-  border-top: 1px solid #FFF;
-  border-bottom: 1px solid #FFF;
+  border-top: 0.5px solid #252527;
+  border-bottom: 0.5px solid #252527;
   padding: 15px 0;
 }
 .author-byline img {
