--- a/theme/src/base/base.less
+++ b/theme/src/base/base.less
@@ -10,6 +10,7 @@ html {
     background-color: @bgColorHtml;
     overflow: -moz-scrollbars-vertical;
     overflow-y: scroll;
+    overflow-x: hidden;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
