--- a/theme/src/layout/layout.less
+++ b/theme/src/layout/layout.less
@@ -26,7 +26,7 @@
     width: 60%;
     margin: 0 auto;
     background-color: #1b1c20;
-    border: 0.5px solid #252527;
+    //border: 0.5px solid #252527;
 
     &.inner-wrap-footer {
         border: none;
@@ -91,8 +91,8 @@ figcaption p {
 
 .author-byline {
     margin: 30px 0;
-    border-top: 1px solid #FFF;
-    border-bottom: 1px solid #FFF;
+    border-top: 0.5px solid #252527;
+    border-bottom: 0.5px solid #252527;
     padding: 15px 0;
     & img {
         width: 20%;
