--- a/theme/src/layout/layout_kmom04.less
+++ b/theme/src/layout/layout_kmom04.less
@@ -5,7 +5,12 @@
 /**
  * Variables
  */
-
+@bgColorInnerWrap: #1b1c20;
+@bgColorHeader: #1b1c20;
+@bgColorFooter: #1b1c20;
+@colorHeader: white;
+@colorFooter: white;
+@borderColor: #252527;
 
 /**
  * General layout
@@ -19,16 +24,19 @@
 .inner-wrap {
     //width: 60%;
     //margin: 0 auto;
-    background-color: #1b1c20;
+    background-color: @bgColorInnerWrap;
     //border: 0.5px solid #252527;
     #desinax-vgrid.grid(1100px);
 
     &.inner-wrap-footer {
         border: none;
+        color: @colorFooter;
     }
 
     &.inner-wrap-header {
         #desinax-vgrid.grid(100%);
+        color: @colorHeader;
+        background-color: @bgColorHeader;
     }
     //overflow: auto;
 }
@@ -50,7 +58,7 @@
 
 .outer-wrap {
     &.outer-wrap-header {
-        border-bottom: 0.5px solid #252527;
+        border-bottom: 0.5px solid @borderColor;
     }
 }
 
@@ -62,14 +70,14 @@ h1,
 h2,
 h3,
 h4 {
-    border-bottom: 0.5px solid #252527;
+    border-bottom: 0.5px solid @borderColor;
 }
 
 /**
  * Header layout
  */
 .outer-wrap-header {
-    background-color: #1b1c20;
+    background-color: @bgColorHeader;
     //overflow: hidden;
     //.clearfix();
 }
@@ -136,8 +144,8 @@ h4 {
 
 .wrap-sidebar h4 {
     //border-top: 0.5px solid #252527;
-    background-image: linear-gradient(to right,#17181b,#1b1c20);
-    border-bottom: 0.5px solid #252527;
+    //background-image: linear-gradient(to right,#17181b,#1b1c20);
+    border-bottom: 0.5px solid @borderColor;
 }
 
 .region-flash img {
@@ -185,9 +193,9 @@ figcaption p {
 }
 
 .author-byline {
-    //margin: 30px 0;
-    border-top: 0.5px solid #252527;
-    border-bottom: 0.5px solid #252527;
+    //margin-bottom: 5px;
+    border-top: 0.5px solid @borderColor;
+    //border-bottom: 0.5px solid @borderColor;
     //padding: 15px 0;
     & img {
         padding-left: 5px;
@@ -263,11 +271,11 @@ figcaption p {
 
 .outer-wrap {
     &.outer-wrap-footer {
-        border-top: 0.5px solid #252527;
+        border-top: 0.5px solid @borderColor;
     }
 }
 
 .outer-wrap-footer,
 .inner-wrap-footer {
-    background-color: #1b1c20;
+    background-color: @bgColorFooter;
 }
