Updated according to kmom05

--- a/theme/src/layout/layout_kmom04.less
+++ b/theme/src/layout/layout_kmom04.less
@@ -206,14 +206,15 @@ figcaption p {
 
 .article-pic-container {
     width: 40%;
+    float: right;
     & img {
         width: 100%;
     }
 }
 
-.figure.right {
-    float: right;
-}
+// .figure.right {
+//     float: right;
+// }
 
 /**
  * Responsive 1, 2, 3
